--- a/.github/workflows/UserQA.yml
+++ b/.github/workflows/UserQA.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         docker build -t chamorrito/change-password ./User-Domain/change-password
         docker build -t chamorrito/delete-account ./User-Domain/delete-user
+        docker build -t chamorrito/phrases ./User-Domain/biblio_store_service
 
 
     - name: Push images to Docker Hub
@@ -30,6 +31,7 @@ jobs:
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker push chamorrito/change-password
         docker push chamorrito/delete-account
+        docker push chamorrito/phrases
 
     - name: Deploy services to EC2
       uses: appleboy/ssh-action@v1.0.0
@@ -43,11 +45,15 @@ jobs:
           docker rm change-password || true
           docker stop delete-account || true
           docker rm delete-account || true
+          docker stop phrases || true
+          docker rm phrases || true
 
           # D
           docker pull chamorrito/change-password
           docker pull chamorrito/delete-account
+          docker pull chamorrito/phrases
 
           # E
           docker run -d --name change-password -p 8005:8005 --restart unless-stopped chamorrito/change-password
           docker run -d --name delete-account -p 8004:8004 --restart unless-stopped chamorrito/delete-account
+          docker run -d --name phrases -p 5000:5000 --restart unless-stopped chamorrito/phrases
