feat: :sparkles: add new micros

--- a/.github/workflows/ProdQA.yml
+++ b/.github/workflows/ProdQA.yml
@@ -21,27 +21,38 @@ jobs:
 
     - name: Build Docker images for login and register services
       run: |
-
+        docker build -t chamorrito/review ./Products-Domain/Reviews
+        docker build -t chamorrito/get_review ./Products-Domain/Get_review
         docker build -t chamorrito/cart ./Products-Domain/Cart
 
     - name: Push images to Docker Hub
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker push chamorrito/review
+        docker push chamorrito/get_review
         docker push chamorrito/cart
 
     - name: Deploy services to EC2
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: 13.216.48.249
+        host: 13.216.48.249 
         username: ec2-user
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
           # De
+          docker stop review || true
+          docker rm review || true
+          docker stop get_review || true
+          docker rm get_review || true
           docker stop cart || true
           docker rm cart || true
 
           # D
+          docker pull chamorrito/review
+          docker pull chamorrito/get_review
           docker pull chamorrito/cart
 
           # Eje
+          docker run -d --name review -p 5000:5000 --restart unless-stopped chamorrito/review
+          docker run -d --name get_review -p 5001:5001 --restart unless-stopped chamorrito/get_review
           docker run -d --name cart -p 5002:5002 --restart unless-stopped chamorrito/cart
